# crosschain

./: analysis_options.yaml  pubspec.yaml
example/: anychain_example.dart
lib/: crosschain.dart
lib/src/: common.dart  mnemonic.dart  utils.dart
rust/: Cargo.toml  README.md
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  main.rs
rust/src/accounts/: mod.rs
rust/src/chains/: btc.rs  eth.rs  mod.rs  ton.rs  tron.rs
test/: amount_test.dart  crosschain_test.dart
